use mybatisX generate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,9 @@ spring:
 #      logic-delete-field: isDeleted
 #      logic-delete-value: 1
 #      logic-not-delete-value: 0
+
+# print crud log
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
