--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,26 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <!--    mybatis-plus maven bom-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-bom</artifactId>
+                <version>3.5.10.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version> 0.12.3</version>
+            <version>0.12.3</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -44,7 +58,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version> 2.3.0</version>
+            <version>2.3.0</version>
         </dependency>
 
 
@@ -63,16 +77,21 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-<!--        mybatis-plus-->
+        <!--        mybatis-plus-->
+        <!-- spring boot3 引入可选模块 -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
-            <version>3.5.10.1</version>
         </dependency>
+        <!--        code generator-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.10.1</version>
+        </dependency>
+        <!-- jdk 11+ 引入可选模块 分页插件-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
         </dependency>
 
         <dependency>
@@ -123,7 +142,7 @@
                     </excludes>
                 </configuration>
             </plugin>
-<!--            add to fix test warning of Mockito is currently self-attaching to enable the inline-mock-maker. -->
+            <!--            add to fix test warning of Mockito is currently self-attaching to enable the inline-mock-maker. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
