--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
         </dependencies>
     </dependencyManagement>
 
-
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/org.json/json -->
@@ -95,6 +94,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
